# kedro-0.19-spaceflights-tutorial

./: README.md  post-create.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
conf/base/: catalog.yml  parameters_test_pipeline.yml
src/spaceflights_pandas/pipelines/test_pipeline/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/test_pipeline/: test_pipeline.py
