[project]
name = "kedro-spaceflights"
version = "0.1.0"
description = ""
authors = [
    {name = "RO",email = ""}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kedro (>=0.19.10,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

